[gd_scene load_steps=2 format=3 uid="uid://43mbhhiifoc2"]

[ext_resource type="Script" path="res://Scripts/Options.gd" id="1_t825q"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 920.0
offset_bottom = 590.0
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_t825q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.254
anchor_bottom = 1.095
offset_left = -32.0
offset_top = -26.0
offset_right = 32.3199
offset_bottom = 33.95
grow_horizontal = 2
grow_vertical = 2
color = Color(0.415686, 0.415686, 0.415686, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 26.0
offset_top = 67.0
offset_right = 425.0
offset_bottom = 344.0
scale = Vector2(1.5, 1.5)

[node name="MasterVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="VolumeLabel" type="Label" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 2
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
max_value = 1.0
step = 0.001
value = 0.8

[node name="DisplayContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="FullScreen" type="Label" parent="VBoxContainer/DisplayContainer"]
layout_mode = 2
text = "FullScreen"

[node name="FullScreenCheckBox" type="CheckBox" parent="VBoxContainer/DisplayContainer"]
layout_mode = 2

[node name="VSyncContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="VSyncLabel" type="Label" parent="VBoxContainer/VSyncContainer"]
layout_mode = 2
text = "V-Sync"

[node name="V-Sync CheckBox" type="CheckBox" parent="VBoxContainer/VSyncContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 880.0
offset_top = -33.0
offset_right = 925.0
offset_bottom = -2.0
grow_vertical = 0
scale = Vector2(2, 2)
text = "Back"

[node name="ResetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 65.0
offset_top = -33.0
offset_right = 116.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
text = "Reset"

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="toggled" from="VBoxContainer/DisplayContainer/FullScreenCheckBox" to="." method="_on_full_screen_check_box_toggled"]
[connection signal="pressed" from="VBoxContainer/VSyncContainer/V-Sync CheckBox" to="." method="_on_v_sync_check_box_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
