extends Control


func _on_volume_changed():
	pass # Replace with function body.


func _on_music_changed():
	pass # Replace with function body.


func _on_full_screen_pressed():
	pass # Replace with function body.


func _on_window_pressed():
	pass # Replace with function body.


func _on_v_sync_check_box_pressed():
	pass # Replace with function body.


func _on_latvian_pressed():
	pass # Replace with function body.


func _on_english_pressed():
	pass # Replace with function body.


func _on_back_button_pressed():
	get_tree().change_scene_to_file("res://scenes/Menu.tscn")	


func _on_apply_button_pressed():
	pass # Replace with function body.


func _on_reset_button_pressed():
	pass # Replace with function body.
